# terminalcraft

./: .gitignore  .gitmodules  LICENSE  Project.py  README.md  calculator.py  cardFont.json  index.js  main.py  package.json  phishdetect.py  pyproject.toml  readme.md  requirements  requirements.txt  setup.py  space.py  submission.py  test.py  testgame.py  tetris.py  tic_tac_toe_history.json
.github/: Word-Count-CLI.md  pull_request_template.md
CLI_multiplayer.egg-info/: PKG-INFO
CommandLineBrowser/: main.py  searcher.py
ConsoleGame1-main/: README.md
Submissions/: README.md
TwoPlayerGamesCLI/: __init__.py
Veritaminal/: __init__.py  publish.py  run_game.py  setup_veritaminal.py  veritaminal.bat
Word Counter CLI/: README.md  requirements.txt  setup.py
comboML/: __init__.py  app.py  combo_ml.tcss  main.py  pyproject.toml
dungeon/: Dockerfile  add-ttyd.sh  run-app.sh
fizer/: config.py  main.py  organizer.py  undo.py
install/: install-windows.ps1
src/: config_commands.py  summary_command.py
ssu/: README.md  go.mod  go.sum
submission/: README.md  compile.py  main.py  requirements.txt
submission-phishdetect/: README.md  Readme.md  Requirements.txt  phishdetect7.py
submissions/: .gitignore  README.MD  README.md  api_docs.md  app.py  client.py  clipkeep.py  default.config  example.py  install.sh  main.js  main.py  package-lock.json  package.json  pull_request_overview.md  readme.md  requirements.txt  rovr.py  server.py  setup.py  snake-game.py  utils.py  vimgamething.py
submissions/FerrisLog/: Cargo.toml  README.md  palms.json
submissions/FerrisLog/src/: lib.rs
submissions/FerrisLog/src/kvstore/: command.rs  error.rs  mod.rs
submissions/FerrisLog/tests/: tests.rs
submissions/GemTerm/: .env.example  README.md  chat.py  clear.py  generate.py  getname.py  help.py  info.py  main.py  pyproject.toml  setname.py
submissions/bicycle/: CMakeLists.txt  README.md  bicycle.cpp
submissions/bicycle/cargs/include/: cargs.h
submissions/bicycle/cargs/src/: cargs.c
submissions/bicycle/core/: card.cpp  card.h  deck.cpp  deck.h
submissions/bicycle/games/: baccarat.cpp  baccarat.h
submissions/bicycle/src/: main.c
submissions/bicycle/src/core/: card.h  clock.c
submissions/bicycle/src/games/: baccarat.c
submissions/clippyman/: CMakeLists.txt  LICENSE  Makefile  README.md  compile_flags.txt
submissions/clippyman/include/: EventData.hpp  config.hpp  util.hpp
submissions/clippyman/include/clipboard/: ClipboardListener.hpp
submissions/clippyman/include/clipboard/unix/: ClipboardListenerUnix.hpp
submissions/clippyman/include/clipboard/wayland/: ClipboardListenerWayland.hpp
submissions/clippyman/include/clipboard/wayland/wayclip/: common.h
submissions/clippyman/include/clipboard/x11/: ClipboardListenerX11.hpp
submissions/clippyman/include/toml++/: toml.hpp
submissions/clippyman/src/: box.cpp  config.cpp  main.cpp  util.cpp
submissions/clippyman/src/clipboard/unix/: ClipboardListenerUnix.cpp
submissions/clippyman/src/clipboard/wayland/: ClipboardListenerWayland.cpp
submissions/clippyman/src/clipboard/wayland/wayclip/: Makefile  common.c  common.h  waycopy.c  waypaste.c
submissions/clippyman/src/clipboard/x11/: ClipboardListenerX11.cpp
submissions/clippyman/src/fmt/: Makefile
submissions/clippyman/src/toml++/: Makefile
submissions/codepack/: .gitignore  Cargo.toml  README.md  dist-workspace.toml
submissions/codepack/src/: constants.rs  lib.rs  main.rs
submissions/codepack/tests/: filtering.rs  integration_tests.rs  unit_tests.rs
submissions/codepack/wix/: main.wxs
submissions/cpp-snake/: BUILD_AND_RUN.md  CMakeLists.txt  snake.cpp
submissions/cubitr/: .gitignore  CMakeLists.txt  LICENSE  README.md  cubitr.c  palms.json
submissions/mental-maths-trainer/: Cargo.toml  README.md
submissions/mental-maths-trainer/src/: app.rs  config.rs  game.rs  main.rs  stats.rs  ui.rs
submissions/mxtransform/: .gitignore  Cargo.toml  README.md  flake.nix
submissions/mxtransform/.cargo/: config.toml
submissions/mxtransform/src/: images.rs  main.rs  matrix_ext.rs
submissions/pscsan/: Cargo.toml  README.md
submissions/pscsan/src/: main.rs
submissions/savemyexams-to-anki/: Cargo.toml  README.md  config.json  vhs.tape
submissions/savemyexams-to-anki/src/: main.rs
submissions/shelfit/: Cargo.toml  README.md  palms.json  sqlite3.lib
submissions/shelfit/src/: clipboard.rs  db.rs  error.rs  main.rs
submissions/swar/: README.md  palms.json  pyproject.toml
submissions/swar/swar/: main.py  map_notes.py  notes.json  player.py
submissions/terminal_bookmarks/: README.md  __init__.py  pyproject.toml
submissions/terminal_bookmarks/terminal_bookmarks/cli/: commands.py
submissions/time_zone/: CHANGELOG.md  CREATE_RELEASE.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.2.md  USER_GUIDE.md  __main__.py  build_debug.py  build_exe.py  build_fixed.py  build_simple.py  config.py  debug_minimal.py  export.py  palms.json  parser.py  pyproject.toml  requirements.txt  roster.csv  scheduler.py  test_local.py  ui.py
submissions/tshare/: Cargo.toml  LICENSE  README.md  justfile
submissions/tshare/public/: connect.html  index.html
submissions/tshare/src/tshare/: Cargo.toml
submissions/tshare/src/tshare/src/: main.rs
submissions/tshare/src/tunnel-server/: Cargo.toml
submissions/tshare/src/tunnel-server/src/: main.rs
submissions/tshare/src/web-server/: Cargo.toml
submissions/tshare/src/web-server/src/: main.rs
submissions/tuichat/client/: Cargo.toml
submissions/tuichat/client/src/: app.rs  handler.rs  main.rs  tui.rs  ui.rs
submissions/tuitype/: .gitignore  Cargo.toml  README.md
submissions/tuitype/src/: lib.rs  main.rs
submissions/tuitype/src/config/: mod.rs
submissions/tuitype/src/input/: mod.rs
submissions/tuitype/src/stats/: mod.rs
submissions/tuitype/src/text/: mod.rs
submissions/tuitype/src/text/word_lists/: easy.txt  hard.txt  medium.txt  quotes.txt
submissions/tuitype/src/ui/: draw.rs  mod.rs  themes.rs
submissions/tuitype/src/util/: mod.rs
submissions/tuitype/src/wasm/: exports.rs  mod.rs
(+1532 files in other folders)
