[package]
name = "ferris"
version = "0.1.0"
authors = ["FabioCanavarro"]
description = "A key-value store"
edition = "2018"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.29", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }

serde_json = "1.0.139"
tempfile = "3.0.7"




