[project]
name = "gemterm"
version = "0.1.0"
description = ""
authors = [
    {name = "Dhruv Krishna Vaid",email = "dhruvkrishnavaid@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai (>=1.5.0,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "ascii-magic (>=2.3.0,<3.0.0)",
    "markdown (>=3.7,<4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]
license = "MIT"

[tool.poetry]
package-mode = false

[tool.ruff]
indent-width = 2
line-length = 100

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
