[package]
name = "codepack"
version = "0.10.1"
edition = "2021"

repository = "https://github.com/JasonLovesDoggo/codepack"
authors = ["Jason Cameron <git@jasoncameron.dev>"]
license = "MIT"
description = "A *lightning-fast* tool that transforms a directory into a single, LLM-friendly text file, perfect for easy processing and analysis."
homepage = "https://codepack.jasoncameron.dev"
readme = "README.md"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
anyhow = "1.0.93"
ignore = "0.4.23"
indicatif = "0.17.9"
prettytable = "0.10.0"
globset = "0.4.15"
log = "0.4.22"

[dev-dependencies]
tempfile = "3.14.0"

[package.metadata.wix]
upgrade-guid = "76DE8F50-9B4A-47A2-80C0-30C7074AFD81"
path-guid = "40D06AA7-224A-44A2-B663-F949EA3A47EC"
license = false
eula = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
