cmake_minimum_required(VERSION 3.10)
project(Cubitr)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED True)
add_executable(Cubitr cubitr.c)
find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIRS})
add_definitions(-DNCURSES_STATIC)
target_link_libraries(Cubitr ${CURSES_LIBRARIES})
if(UNIX)
    target_link_libraries(Cubitr m)
endif()
