[package]
name = "savemyexams-to-anki"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.7"
fastrand = "2.3.0"
genanki-rs = "0.4.0"
log = "0.4.26"
reqwest = { version = "0.12.14", features = ["blocking"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"
