[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-bookmarks"
version = "1.0.0"
description = "A command-line bookmark manager for your terminal commands"
authors = [
    {name = "Amogh Agrawal", email = "notarealemail@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0"
]

[project.scripts]
tb = "terminal_bookmarks.cli.commands:cli"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["terminal_bookmarks"]