[workspace]
members = ["src/tshare", "src/tunnel-server", "src/web-server"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["RobbyV2 <robby@robby.blue"]
license = "MIT"
repository = "https://github.com/RobbyV2/tshare"
homepage = "https://github.com/RobbyV2/tshare"
description = "Share your terminal session with anyone through a simple web link"
keywords = ["terminal", "sharing", "collaboration", "tty", "websocket"]
categories = ["command-line-utilities", "web-programming::websocket"]
edition = "2024"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.17", features = ["v4"] }

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
portable-pty = "0.9"
ctrlc = { version = "3.4.7" }
crossterm = { version = "0.29.0" }

# WebSocket dependencies
tokio-tungstenite = "0.27"

# HTTP client/server dependencies
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.8", features = ["ws"] }

# Concurrency dependencies
dashmap = "6.1"

# Security dependencies
bcrypt = "0.17"

# Dioxus dependencies
dioxus = { version = "0.6", features = ["fullstack", "router"] }

# Frontend dependencies
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
