[package]
name = "tuitype"
version = "0.1.2"
edition = "2021"
description = "A terminal-based typing test application similar to MonkeyType"
authors = ["RobbyV2"]
license = "MIT"

[dependencies]
ratatui = "0.25.0"
crossterm = "0.27.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.1.10"
anyhow = "1.0"
dirs = "5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Window"] }
js-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tuitype"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
