[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.2"
crossterm = { version = "0.28.0", features = ["event-stream"] }
ratatui = "0.29.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
futures = "0.3.28"
common = { path = "../common" }