[package]
name = "tunnel-server"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "TShare tunnel server - handles WebSocket connections and session management"
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[[bin]]
name = "tunnel-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
bcrypt = { workspace = true }
tokio-tungstenite = { workspace = true }
clap = { workspace = true }
