[package]
name = "web-server"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "TShare web server - serves the web interface for viewing terminal sessions"
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[[bin]]
name = "web-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bcrypt = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
